--- a/package.json
+++ b/package.json
@@ -12,8 +12,7 @@
     "type": "git",
     "url": ""
   },
-  "keywords": [
-  ],
+  "keywords": [],
   "author": "Chicago Tribune News Applications",
   "license": "MIT",
   "devDependencies": {
@@ -30,5 +29,10 @@
   "browserify": {
     "debug": true
   },
-  "tribune": {}
+  "tribune": {},
+  "dependencies": {
+    "d3-scale": "^1.0.5",
+    "leaflet": "^1.0.3",
+    "leaflet-providers": "^1.1.16"
+  }
 }
